--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
-    <title>Document</title>
+    <title>About me</title>
 </head>
 <body>
-    <h1>Witam na mojej stronie</h1>
-    <p>No Elo</p>
+    <div id="menu"></div>
+    <div id="intro"><h1>Witam na mojej stronie</h1></div>
+    <div id="gallery"></div>
 </body>
 </html>
