--- a/index.html
+++ b/index.html
@@ -4,13 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <script src="assets/js/script.js"></script>
     <title>About me</title>
 </head>
 <body>
-    <div id="menu"></div>
-    <div id="intro"><h1>Witam na mojej stronie</h1></div>
-    <div id="gallery"></div>
+    <header>
+            <a href="index.html" class="a1">KacperKwarta</a>
+            <a href="index.html">Start</a>
+            <a href="index.html">About Me</a>
+            <a href="index.html">My Projects</a>
+        </div>
+    </header>
+    <main>
+        <div id="intro"><h2>cout&lt;&lt;"Hello</h2><h2>World!!"&lt;&lt;endl;</h2></div>
+        <div id="gallery">
+            <div>
+                <div id="img"><img src="assets/img/img1.jpg"></div>
+                <div>Tekst1</div>
+            </div>
+            <div>
+                <div id="img"><img src="assets/img/img2.jpg"></div>
+                <div>Tekst2</div>
+            </div>
+            <div>
+                <div id="img"><img src="assets/img/img3.jpg"></div>
+                <div>Tekst3</div>
+            </div>
+            <div>
+                <div id="img"><img src="assets/img/img4.jpg"></div>
+                <div>Tekst4</div>
+            </div>
+        </div>
+    </main>
+    
 </body>
 </html>
