--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
         <div id="intro"><h2>cout&lt;&lt;"Hello</h2><h2>World!!"&lt;&lt;endl;</h2></div>
         <div id="gallery">
             <div>
-                <div id="img"><img src="assets/img/img1.jpg"></div>
+                <div id="img"><img src="assets/img/img1.jpg"></img></div>
                 <div>Tekst1</div>
             </div>
             <div>
-                <div id="img"><img src="assets/img/img2.jpg"></div>
+                <div id="img"><img src="assets/img/img2.jpg"></img></div>
                 <div>Tekst2</div>
             </div>
             <div>
-                <div id="img"><img src="assets/img/img3.jpg"></div>
+                <div id="img"><img src="assets/img/img3.jpg"></img></div>
                 <div>Tekst3</div>
             </div>
             <div>
-                <div id="img"><img src="assets/img/img4.jpg"></div>
+                <div id="img"><img src="assets/img/img4.jpg"></img></div>
                 <div>Tekst4</div>
             </div>
         </div>
