--- a/index.html
+++ b/index.html
@@ -5,36 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="shortcut icon" href="assets/img/tab_icon.png"/>
     <script src="assets/js/script.js"></script>
     <title>About me</title>
 </head>
 <body>
     <header>
-            <a href="index.html" class="a1">KacperKwarta</a>
-            <a href="index.html">Start</a>
-            <a href="index.html">About Me</a>
-            <a href="index.html">My Projects</a>
+            <a href="index.html" id="start">Start</a>
+            <a href="index.html" id="about">About Me</a>
+            <a href="index.html" id="proj">My Projects</a>
+            <a href="index.html" id="cont">Contact</a>
     </header>
     <main>
         <div id="intro"><h2>cout&lt;&lt;"Hello</h2><h2>World!!"&lt;&lt;endl;</h2></div>
-        <div id="gallery">
-            <div>
-                <div id="img"><img src="assets/img/img1.jpg"></img></div>
-                <div>Tekst1</div>
-            </div>
-            <div>
-                <div id="img"><img src="assets/img/img2.jpg"></img></div>
-                <div>Tekst2</div>
-            </div>
-            <div>
-                <div id="img"><img src="assets/img/img3.jpg"></img></div>
-                <div>Tekst3</div>
-            </div>
-            <div>
-                <div id="img"><img src="assets/img/img4.jpg"></img></div>
-                <div>Tekst4</div>
-            </div>
-        </div>
     </main>
     
 </body>
