--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
 </head>
 <body>
     <header>
-            <a href="index.html" id="start">Start</a>
-            <a href="index.html" id="about">About Me</a>
-            <a href="index.html" id="proj">My Projects</a>
-            <a href="index.html" id="cont">Contact</a>
+        <div class="topnav" id="myTopnav">
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">≡</a>
+            <a href="#home" class="active">Start</a>
+            <a href="#about">About Me</a>
+            <a href="#proj">Projects</a>
+            <a href="#cont">Contact</a>
+            
+        </div>
     </header>
     <main>
         <div id="intro"><h2>cout&lt;&lt;"Hello</h2><h2>World!!"&lt;&lt;endl;</h2></div>
