--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </section>
     <footer>
         <section>
-            <a href="index.html"><img src="IMG/logo.png" alt="logo"></a>
+            <a href="index.html"><img src="assets/img/logo.png" alt="logo"></a>
         </section>
         <section>
             <p>©All rights reserved</p>
