--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                             Galeria
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/Kalkulator/">Psy</a></li>
-                            <li><a class="dropdown-item" href="/Duza_Strona/">Koty</a></li>
+                            <li><a class="dropdown-item" href="/Kalkulator/">Kalkulator</a></li>
+                            <li><a class="dropdown-item" href="/Duza_Strona/">Duża strona</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
